--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "starter project with webpack, angular, es6 and bootstrap",
   "main": "index.js",
-  "babel": {
-    "stage": 1
-  },
   "scripts": {
     "prestart": "npm install",
     "start": "webpack-dev-server",
@@ -30,19 +27,21 @@
   },
   "homepage": "https://github.com/nirkaufman/angular-webpack-starter",
   "devDependencies": {
-    "babel-core": "5.6.4",
-    "babel-loader": "5.1.4",
-    "css-loader": "0.15.1",
-    "file-loader": "0.8.4",
-    "json-loader": "0.5.2",
-    "node-libs-browser": "0.5.2",
+    "babel-core": "6.3.17",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-stage-1": "6.3.13",
+    "css-loader": "0.23.0",
+    "file-loader": "0.8.5",
+    "json-loader": "0.5.4",
+    "node-libs-browser": "0.5.3",
     "raw-loader": "0.5.1",
-    "style-loader": "0.12.3",
-    "url-loader": "0.5.6",
-    "webpack": "1.9.11",
-    "webpack-dev-server": "1.9.0"
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.7",
+    "webpack": "1.12.9",
+    "webpack-dev-server": "1.14.0"
   },
   "dependencies": {
-    "angular": "1.4.1"
+    "angular": "1.4.8"
   }
 }
