--- a/package.json
+++ b/package.json
@@ -26,22 +26,21 @@
     "url": "https://github.com/nirkaufman/angular-webpack-starter/issues"
   },
   "homepage": "https://github.com/nirkaufman/angular-webpack-starter",
-  "devDependencies": {
-    "babel-core": "6.3.17",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-stage-1": "6.3.13",
-    "css-loader": "0.23.0",
+  "devDependencies": {},
+  "dependencies": {
+    "angular": "1.5.0",
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.3",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-stage-1": "6.5.0",
+    "css-loader": "0.23.1",
     "file-loader": "0.8.5",
     "json-loader": "0.5.4",
-    "node-libs-browser": "0.5.3",
+    "node-libs-browser": "1.0.0",
     "raw-loader": "0.5.1",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
-    "webpack": "1.12.9",
-    "webpack-dev-server": "1.14.0"
-  },
-  "dependencies": {
-    "angular": "1.4.8"
+    "webpack": "1.12.13",
+    "webpack-dev-server": "1.14.1"
   }
 }
