--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.15",
     "lodash": "^3.8.0",
+    "malarkey": "^1.3.3",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
