--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-typist",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "Angular wrapper for malarkey",
   "main": "index.js",
   "dependencies": {
@@ -17,7 +17,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
-    "jshint": "^2.9.2"
+    "jshint": "^2.9.2",
+    "live-reload": "^1.1.0"
   },
   "scripts": {},
   "keywords": [
